# Generative-Model-is-Every-Thing-You-Must-Learn

./: .gitignore  README.md
Day_01_Gaussian_Noise_Basics/: Makefile  README.md  pyproject.toml  requirements.txt
Day_01_Gaussian_Noise_Basics/configs/: default.yaml
Day_01_Gaussian_Noise_Basics/notebooks/: 01_gaussian_noise_exploration.ipynb
Day_01_Gaussian_Noise_Basics/outputs/logs/: noise_metrics.csv  theoretical_stats.csv
Day_01_Gaussian_Noise_Basics/scripts/: export_animation.sh  run_noise_demo.sh
Day_01_Gaussian_Noise_Basics/src/: __init__.py  cli.py  dataset.py  metrics.py  noise.py  utils.py  visualize.py
Day_01_Gaussian_Noise_Basics/tests/: test_noise.py  test_visualize.py
Day_02_Denoising_Autoencoder/: Makefile  README.md  pyproject.toml  requirements.txt
Day_02_Denoising_Autoencoder/configs/: mnist.yaml
Day_02_Denoising_Autoencoder/notebooks/: 02_dae_experiments.ipynb
Day_02_Denoising_Autoencoder/outputs/logs/: evaluation_results.json  train_metrics.csv  val_metrics.csv
Day_02_Denoising_Autoencoder/outputs/reports/: limitations_analysis.html
Day_02_Denoising_Autoencoder/scripts/: eval_mismatch_noise.sh  make_figures.sh  train_mnist.sh
Day_02_Denoising_Autoencoder/src/: __init__.py  cli.py  compare.py  dataset.py  eval.py  loss.py  metrics.py  noise.py  train.py  utils.py  visualize.py
Day_02_Denoising_Autoencoder/src/models/: __init__.py  dae_conv.py  dae_unet.py
Day_02_Denoising_Autoencoder/tests/: test_models.py  test_noise.py  test_train_step.py  test_visualize.py
Day_03_VAE_Refresher/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
Day_03_VAE_Refresher/configs/: cifar10.yaml  mnist.yaml
Day_03_VAE_Refresher/notebooks/: 03_vae_latent_playground.ipynb
Day_03_VAE_Refresher/outputs/logs/: events.out.tfevents.1755771109.ariel.2743489.0  events.out.tfevents.1755771256.ariel.2744872.0  metrics.csv
Day_03_VAE_Refresher/scripts/: compare_with_dae.sh  make_samples.sh  train_cifar10.sh  train_mnist.sh
Day_03_VAE_Refresher/src/: __init__.py  cli.py  dataset.py  eval.py  losses.py  sample.py  train.py  utils.py  visualize.py
Day_03_VAE_Refresher/src/models/: __init__.py  vae_conv.py  vae_mlp.py  vae_resnet.py
Day_03_VAE_Refresher/tests/: test_losses.py  test_models.py  test_train_step.py  test_visualize.py
Day_04_Forward_Diffusion_Process/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
Day_04_Forward_Diffusion_Process/configs/: cifar10.yaml  mnist.yaml
Day_04_Forward_Diffusion_Process/notebooks/: 04_forward_diffusion.ipynb
Day_04_Forward_Diffusion_Process/outputs/logs/: forward_stats.csv
Day_04_Forward_Diffusion_Process/scripts/: make_figures.sh  run_cifar10.sh  run_mnist.sh
Day_04_Forward_Diffusion_Process/src/: __init__.py  cli.py  dataset.py  ddpm_schedules.py  forward.py  stats.py  utils.py  visualize.py
Day_04_Forward_Diffusion_Process/tests/: __init__.py  test_forward_xt_x0.py  test_schedules.py  test_visualize.py
Day_05_Reverse_Process_Intuition/: Makefile  README.md  pyproject.toml  requirements.txt
Day_05_Reverse_Process_Intuition/configs/: cifar10.yaml  mnist.yaml
Day_05_Reverse_Process_Intuition/notebooks/: 05_reverse_process_playground.ipynb
Day_05_Reverse_Process_Intuition/outputs/logs/: events.out.tfevents.1755911867.ariel.3790473.0  events.out.tfevents.1755911996.ariel.3791566.0  events.out.tfevents.1755912032.ariel.3791976.0  events.out.tfevents.1755912371.ariel.3794558.0  events.out.tfevents.1755912404.ariel.3794930.0
Day_05_Reverse_Process_Intuition/outputs/reports/: reverse_process_comparison.md
Day_05_Reverse_Process_Intuition/scripts/: make_figures.sh  sample_trajectories.sh  train_cifar10.sh  train_mnist.sh
Day_05_Reverse_Process_Intuition/src/: __init__.py  cli.py  compare_forward_reverse.py  dataset.py  ddpm_schedules.py  eval.py  losses.py  sampler.py  trainer.py  utils.py  visualize.py
Day_05_Reverse_Process_Intuition/src/models/: __init__.py  time_embedding.py  unet_tiny.py
Day_05_Reverse_Process_Intuition/tests/: test_unet_tiny.py
Day_06_Full_DDPM_Training_Loop/: Makefile  README.md  pyproject.toml  requirements.txt
Day_06_Full_DDPM_Training_Loop/configs/: cifar10.yaml
Day_06_Full_DDPM_Training_Loop/notebooks/: 06_ddpm_training_playground.ipynb
Day_06_Full_DDPM_Training_Loop/outputs/logs/: evaluation_results.json  training_metrics.json
Day_06_Full_DDPM_Training_Loop/scripts/: animate_traj.sh  make_report.sh  sample_64.sh  train_cifar10.sh  train_mnist.sh
Day_06_Full_DDPM_Training_Loop/src/: __init__.py  cli.py  dataset.py  ddpm_schedules.py  eval.py  losses.py  sampler.py  trainer.py  utils.py  visualize.py
Day_06_Full_DDPM_Training_Loop/tests/: test_loss_and_train.py  test_sampler.py  test_schedules.py  test_unet_small.py  test_visualize.py
Day_07_Sampling_From_DDPM/: Makefile  README.md  demo_sampling.py  pyproject.toml  requirements.txt
Day_07_Sampling_From_DDPM/configs/: cifar10.yaml  mnist.yaml
Day_07_Sampling_From_DDPM/notebooks/: 07_sampling_playground.ipynb
Day_07_Sampling_From_DDPM/scripts/: animate_single.sh  compare_ckpts.sh  sample_mnist.sh
Day_07_Sampling_From_DDPM/src/: __init__.py  checkpoints.py  cli.py  ddpm_schedules.py  quality.py  sampler.py  utils.py  visualize.py
Day_07_Sampling_From_DDPM/tests/: __init__.py  test_compat_day6_ckpt.py  test_sampler_step.py  test_visualize_io.py
Day_08_Beta_Schedule_Comparison/: Makefile  README.md  pyproject.toml  requirements.txt
Day_08_Beta_Schedule_Comparison/configs/: base.yaml  cosine.yaml  linear.yaml  quadratic.yaml  test_cosine.yaml  test_linear.yaml  test_quadratic.yaml
Day_08_Beta_Schedule_Comparison/notebooks/: 08_beta_schedule_playground.ipynb
Day_08_Beta_Schedule_Comparison/scripts/: compare.sh  sample_all.sh  test_train_all.sh  train_all.sh
Day_08_Beta_Schedule_Comparison/src/: __init__.py  cli.py  dataset.py  losses.py  quality.py  sampler.py  schedules.py  trainer.py  utils.py  visualize.py
Day_08_Beta_Schedule_Comparison/tests/: test_sampler_smoke.py  test_schedules_shapes.py  test_training_smoke.py  test_visualize.py
(+47 files in other folders)
