[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "day08-beta-schedule-comparison"
version = "0.1.0"
description = "Day 8: Beta Schedule Comparison for DDPM"
authors = [{name = "Chris Lin"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pillow>=8.0.0",
    "tqdm>=4.64.0",
    "omegaconf>=2.3.0",
    "tensorboard>=2.10.0",
    "scipy>=1.8.0",
    "scikit-image>=0.19.0",
    "lpips>=0.1.4",
    "einops>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
